# 573Renderer

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-renderer.yml  quality-gates.yml
docs/: README.md  blend.md  boot_and_render_loop.md  build.md  ci.md  cli.md  command_stream.md  comment_migration.md  d3d9_backend.md  ddr.md  engine_binding.md  export_pipeline.md  formats.md  game_profiles.md  game_runtime.md  gates.md  gui.md  local_regression.md  loop.md  media_formats.md  ownership.md  qpro.md  settings.md  state.md  support.md  tidy_migration.md
src/: .clang-tidy  afp_anim.cpp  afp_boot.cpp  afp_boot.h  afp_d3d9.cpp  afp_d3d9_callbacks.cpp  afp_d3d9_commands.cpp  afp_d3d9_internal.h  afp_d3d9_textures.cpp  afp_ddr.h  afp_ddr_boot.cpp  afp_ddr_funcs.h  afp_ddr_render.cpp  afp_ddr_render.h  afp_ddr_test.cpp  afp_ddr_test.h  afp_funcs.h  afp_packages.cpp  afpu_funcs.h  anim_inspect.cpp  anim_inspect.h  app_globals.h  arc_extract.cpp  arc_extract.h  avs_boot.cpp  avs_boot.h  avs_funcs.h  avs_xml.cpp  avs_xml.h  boot.cpp  boot.h  customize_extract.cpp  customize_extract.h  dll_offsets.h  engine_session.h  export.cpp  export.h  export_ddr.cpp  export_internal.h  game_profile.cpp  (+48 more)
src/cli/: cli.cpp  cli.h  tool_command.cpp  tool_command.h
src/formats/: .clang-tidy  bgra_crop.cpp  bgra_crop.h  ddr_arc.cpp  ddr_arc.h  dxt_decode.cpp  dxt_decode.h  frame_process.cpp  frame_process.h  hsl_adjust.cpp  hsl_adjust.h
src/gui/: gui_export_panel.cpp  gui_export_panel.h  gui_layout_constants.h  gui_live_controls.cpp  gui_live_controls.h  gui_loading_overlay.cpp  gui_loading_overlay.h  gui_panels.cpp  gui_panels.h  gui_panels_internal.h  gui_qpro_panel.cpp  gui_renderer_tab.cpp  gui_setup_view.cpp  gui_setup_view.h  gui_splitter.cpp  gui_splitter.h  gui_thread.cpp  gui_thread.h  gui_window.cpp  gui_window.h
src/loop/: blend_loop.cpp  blend_loop.h  cli_autopilot.cpp  cli_autopilot.h  ddr_loop_detector.cpp  ddr_loop_detector.h  frame_diff.cpp  frame_diff.h  frame_pacer.cpp  frame_pacer.h  modern_loop.cpp  modern_loop.h  submonitor_cycler.cpp  submonitor_cycler.h
src/media/: media_format.cpp  media_format.h
src/render/: blend_map.cpp  blend_map.h  command_diff.cpp  command_diff.h  command_list.cpp  command_list.h  command_trace.cpp  command_trace.h  hsv_filter.cpp  hsv_filter.h  vertex_math.cpp  vertex_math.h
src/settings/: settings.cpp  settings.h
src/state/: app_state.cpp  app_state.h  boot_lifecycle.cpp  boot_lifecycle.h  fifo_queue.h  ifs_catalog.cpp  ifs_catalog.h  live_controls.cpp  live_controls.h  telemetry.cpp  telemetry.h
src/support/: .clang-tidy  com_ptr.h  dll_loader.cpp  dll_loader.h  env.cpp  env.h  expected.h  log.cpp  log.h  module_handle.h
tests/cli/: cli_tests.cpp
tests/formats/: bgra_crop_tests.cpp  ddr_arc_tests.cpp  dxt_decode_tests.cpp  frame_process_tests.cpp  hsl_adjust_tests.cpp
tests/local/: dll_contract_tests.cpp
tests/loop/: blend_loop_tests.cpp  cli_autopilot_tests.cpp  ddr_loop_detector_tests.cpp  frame_diff_tests.cpp  frame_pacer_tests.cpp  modern_loop_tests.cpp  submonitor_cycler_tests.cpp
tests/media/: media_encode_tests.cpp  media_format_tests.cpp
tests/render/: blend_map_tests.cpp  command_diff_tests.cpp  command_list_tests.cpp  command_stream_gate_tests.cpp  command_trace_tests.cpp  hsv_filter_tests.cpp  pixel_golden_tests.cpp  scene_support.h  vertex_math_tests.cpp
tests/render/goldens/: command_stream_frame.golden  command_stream_wide.golden
tests/settings/: settings_tests.cpp
tests/state/: app_state_tests.cpp  fifo_queue_tests.cpp
tests/support/: .clang-tidy  support_tests.cpp
tools/ci/: check_file_length.py  check_gui_isolation.py  check_no_comments.py  no_comments_exempt.json  run_format.py  run_tidy.py
tools/local/: render_regression.py
vcpkg-overlays/x265/: portfile.cmake
